--- a/mod/area/gabel_lampen.are.yml
+++ b/mod/area/gabel_lampen.are.yml
@@ -13,7 +13,7 @@ Expansion_List:
 
 Flags: {type: :dword, value: 3}
 FogClipDist: {type: :float, value: 99.0}
-Height: {type: :int, value: 3}
+Height: {type: :int, value: 5}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 1}
 LightingScheme: {type: :byte, value: 14}
@@ -53,6 +53,150 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 112}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 112}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 5}
+    Tile_MainLight1: {type: :byte, value: 5}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 288}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 327}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 295}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 5}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 112}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 304}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 280}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 326}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 295}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 315}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
@@ -73,15 +217,27 @@ Tile_List:
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 313}
+    Tile_ID: {type: :int, value: 307}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 327}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 7}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
@@ -89,10 +245,22 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 348}
+    Tile_ID: {type: :int, value: 112}
     Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 5}
+    Tile_MainLight1: {type: :byte, value: 5}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 2}
+    Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -145,6 +313,30 @@ Tile_List:
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 5}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 112}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 0}
     Tile_AnimLoop2: {type: :byte, value: 0}
     Tile_AnimLoop3: {type: :byte, value: 0}
@@ -191,7 +383,31 @@ Tile_List:
     Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 5}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 112}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
 Tileset: {type: :resref, value: wdd04}
 Version: {type: :dword, value: 0}
-Width: {type: :int, value: 4}
+Width: {type: :int, value: 6}
 WindPower: {type: :int, value: 0}
