Gabel Zentrum: fix some map notes

--- a/mod/area/gabel_zentrum.git.yml
+++ b/mod/area/gabel_zentrum.git.yml
@@ -31476,7 +31476,7 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14815
       value: 
-        0: Die Gabel
+        0: Der Drachenhort
     MapNoteEnabled: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: mapnote}
     TemplateResRef: {type: :resref, value: nw_mapnote001}
@@ -32414,13 +32414,12 @@ WaypointList:
     LinkedTo: {type: :cexostr, value: ""}
     LocalizedName: 
       type: :cexolocstr
-      str_ref: 14814
       value: 
         0: Callistos charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
     MapNote: 
       type: :cexolocstr
-      str_ref: 14815
-      value: {}
+      value: 
+        0: Callistos charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
 
     MapNoteEnabled: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: NW_MAPNOTE001}
