--- a/mod/uti/it_iwoodsh002.uti.yml
+++ b/mod/uti/it_iwoodsh002.uti.yml
@@ -2,34 +2,28 @@
 __data_type: UTI
 __struct_id: 4294967295
 AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 80}
+BaseItem: {type: :int, value: 56}
 Charges: {type: :byte, value: 0}
-Cloth1Color: {type: :byte, value: 20}
-Cloth2Color: {type: :byte, value: 20}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 30450}
+Cost: {type: :dword, value: 9839}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  str_ref: 66554
+  str_ref: 84356
   value: {}
 
 Description: 
   type: :cexolocstr
   value: {}
 
-Identified: {type: :byte, value: 0}
-Leather1Color: {type: :byte, value: 20}
-Leather2Color: {type: :byte, value: 20}
+Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
-  str_ref: 66553
+  str_ref: 100951
   value: {}
 
-Metal1Color: {type: :byte, value: 53}
-Metal2Color: {type: :byte, value: 53}
-ModelPart1: {type: :byte, value: 1}
-PaletteID: {type: :byte, value: 18}
+ModelPart1: {type: :byte, value: 43}
+PaletteID: {type: :byte, value: 0}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
@@ -37,22 +31,22 @@ PropertiesList:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 6}
-    CostValue: {type: :word, value: 1}
+    CostTable: {type: :byte, value: 27}
+    CostValue: {type: :word, value: 9}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 22}
-    Subtype: {type: :word, value: 4}
+    PropertyName: {type: :word, value: 84}
+    Subtype: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
+    CostTable: {type: :byte, value: 10}
+    CostValue: {type: :word, value: 3}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 62}
-    Subtype: {type: :word, value: 4}
+    PropertyName: {type: :word, value: 11}
+    Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: X0_MAARCL035}
-TemplateResRef: {type: :resref, value: maarcl043}
+Tag: {type: :cexostr, value: X2_IT_IWOODSHLDL}
+TemplateResRef: {type: :resref, value: it_iwoodsh002}
