--- a/mod/uti/tali_light.uti.yml
+++ b/mod/uti/tali_light.uti.yml
@@ -20,13 +20,13 @@ ArmorPart_RShin: {type: :byte, value: 15}
 ArmorPart_RShoul: {type: :byte, value: 0}
 ArmorPart_RThigh: {type: :byte, value: 4}
 ArmorPart_Robe: {type: :byte, value: 29}
-ArmorPart_Torso: {type: :byte, value: 25}
+ArmorPart_Torso: {type: :byte, value: 44}
 BaseItem: {type: :int, value: 16}
 Charges: {type: :byte, value: 0}
 Cloth1Color: {type: :byte, value: 8}
 Cloth2Color: {type: :byte, value: 11}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 20000}
+Cost: {type: :dword, value: 2500}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -42,8 +42,8 @@ Leather2Color: {type: :byte, value: 7}
 LocalizedName: 
   type: :cexolocstr
   str_ref: 12842
-  value: {}
-
+  value: 
+    0: Leichte Ruestung des lichten Ordens
 Metal1Color: {type: :byte, value: 0}
 Metal2Color: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 0}
@@ -54,5 +54,5 @@ PropertiesList:
 
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_AARCL010}
-TemplateResRef: {type: :resref, value: "001"}
+Tag: {type: :cexostr, value: tali_light}
+TemplateResRef: {type: :resref, value: tali_light}
